--- a/adm/style/event/acp_users_profile_after.html
+++ b/adm/style/event/acp_users_profile_after.html
@@ -1,6 +1,6 @@
 {% INCLUDEJS '@dmzx_specialtitle/jscolor/jscolor.js' %}
 <dl>
-	<dt><label for="user_special_title">{{ lang('SPECIAL_TITLE') }}{{ lang('COLON') }}</label><br /><span>{{ lang('SPECIAL_TITLE_EXPLAIN') }}</span></dt>
+	<dt><label for="user_special_title">{{ lang('SPECIAL_TITLE') ~ lang('COLON') }}</label><br /><span>{{ lang('SPECIAL_TITLE_EXPLAIN') }}</span></dt>
 	<dd><input name="user_special_title" type="text" id="user_special_title" value="{{ SPECIAL_TITLE }}" size="8" maxlength="8" class="inputbox autowidth" /></dd>
 </dl>
 <dl>
